# DeepTalk-ASD

./: .gitignore  .gitmodules  LICENSE  README.md  README_LIB.md  README_cn.md  asd_factory.py  asd_interface.py  main.py  pyproject.toml  requirements.txt  setup.py  worker.py
LR_ASD_ONNX/: demo_onnx.py  export_onnx.py
LR_ASD_ONNX/weights/: audio_frontend.onnx  visual_frontend.onnx
client/: client_main.py  counter_helper.py  cv2_capture.py  face_info_client.py  speech_info_client.py  websocket_client.py
demo/: realtime_asd_demo.py  video_asd_demo.py
evaluation/: UNITALK_README.md  validate_unitalk.py
speaker_detector/: LR_ASD_Inference.py  Light_ASD_Inference.py  LoconetModel.py  TakNet_Inference.py  lightasd.py  loconet.py  lrasd.py  lrasd_onnx.py  talknet.py
src/: __init__.py  asd.py  asd_factory.py  asd_interface.py  deeptalk_logger.py
src/deeptalk_asd/: __init__.py  __main__.py  asd.py  asd_factory.py  audio_frame.py  deeptalk_logger.py  model_manager.py  video_frame.py
src/face_detector/: face_compare_helper.py  face_info.py  inspireface_detector.py
src/speaker_detector/: interface.py  lrasd_onnx.py  voiceprint.py
src/turn_detector/: utterance.py  (+1 more)
test/: image_pipeline.py
utils/: image_helper.py
websocket_handlers/: data_handler.py  server.py
weights/: 3dspeaker_speech_campplus_sv_zh_en_16k-common_advanced.onnx  3dspeaker_speech_eres2netv2_sv_zh-cn_16k-common.onnx  audio_frontend.onnx  av_backend.onnx  cnceleb_resnet34_LM.onnx  pvad.onnx  visual_frontend.onnx  wespeaker_en_voxceleb_resnet34.onnx  wespeaker_zh_cnceleb_resnet34.onnx
(+20 files in other folders)
