[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deeptalk-asd"
version = "0.4.0"
description = "DeepTalk Active Speaker Detection"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "termcolor",
    "tornado",
    "python_speech_features",
    "numpy==1.26.4",
    "opencv-python",
    "scipy",
    "pandas",
    "tqdm",
    "sherpa-onnx",
]

[project.urls]
Homepage = "https://github.com/huyyxy/DeepTalk-ASD"
"Bug Tracker" = "https://github.com/huyyxy/DeepTalk-ASD/issues"
"Source Code" = "https://github.com/huyyxy/DeepTalk-ASD"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
deeptalk-asd = "deeptalk_asd.__main__:main"

